first complete draft of site - need to organize CSS and update README

--- a/countries/Canada/index.html
+++ b/countries/Canada/index.html
@@ -25,35 +25,42 @@
             <h2>Canada</h2> 
           </div>
         </div> 
-        <div class="row">
-          <div class="col-md-12"> 
-            <article class="CountryPages">
-              <img src="../../images/CanadaCNTower.jpeg" alt="CN Tower, Toronto">
+        <article class="CountryPages">   
+          <div class="row">
+            <div class="col-md-12"> 
+              <figure> 
+                <img src="../../images/CanadaCNTower.jpeg" alt="CN Tower, Toronto">
+                <figcaption>A view of CN Tower</figcaption>
+              </figure> 
               <p>I have spent many summers in Canada, as I have extensive family there on both coasts. One of my earliest memories 
                 is of stepping onto the glass floor at CN Tower - I remember being frightened but also thrilled!</p> 
-              <div class="SidebySide">
+              <figure class="SidebySide"> 
                 <img src="../../images/CanadaStanleyPark.jpg" alt="Totem Poles at Stanley Park, Vancouver">
                 <img src="../../images/CanadaVancouverSkyline.jpg" alt="Vancouver skyline">
-              </div> 
+                <figcaption>At left, Totel Poles in Stanley park. At right, view of Vancouver skyline.</figcaption>
+              </figure> 
               <p>When not in Toronto, I was passing time in Vancouver. My grandparents lived nearby in Abbotsford, which was for all intents and purposes a 
                 mini-Punjab. Since it was a rural area near farmland, it was also pretty chill. Still, it was always nice to go back to 
                 family in Vancouver and get reconnected with the rest of the world!</p> 
-              <img src="../../images/CanadaMontTremblant.jpeg" alt="Mountains in Quebec, Mont Tremblant">
+              <figure> 
+                <img src="../../images/CanadaMontTremblant.jpeg" alt="Mountains in Quebec, Mont Tremblant">
+                <figcaption>The countryside at Mont Tremblant.</figcaption>
+              </figure> 
               <p>I would love to visit other parts of Canada, like Nova Scotia. I have been lucky enough to go to the Mont Tremblant resort
                 in Quebec, but I didn't get a chance to really explore Montreal, which we only drove through.. There is so much more I have 
                 yet to see!</p>
-            </article>
-          </div>
-        </div> 
+            </div>
+          </div> 
+        </article>
       </div> 
     </main> 
     <footer>
       <div class="navbar navbar-static-bottom">
         <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="About/index.html">About</a></li>
+          <li><a href="../../About/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="Contact/index.html">Contact</a></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
         </ul> 
       </div> 
     </footer> 
