--- a/countries/Ireland/index.html
+++ b/countries/Ireland/index.html
@@ -28,22 +28,27 @@
         <article class="CountryPages">
           <div class="row">
             <div class="col-md-12">
-              <img src="../../images/IrelandGuinness.jpg" alt="Guinness Factory">
+              <figure> 
+                <img src="../../images/IrelandGuinness.jpg" alt="Guinness Factory">
+                <figcaption>Entrance to Guinness Factory!</figcaption>
+              </figure>
               <p>I went to Ireland while studying abroad in Italy. I mostly stayed in Dublin, venturing out to see
                 Howth. Dublin honestly has some of the nicest people I have ever met. People would randomly wave at me,
                 which was confusing at first. It was really fun to vist the Guinness Factory and get tipsy in the middle
                 of the day. It was also really fun to do a pub crawl and meet other tourists enjoying the city.</p> 
-              <div class="SidebySide">
+              <figure class="SidebySide">
                 <img src="../../images/IrelandStStephens.jpg" alt="Feeding Swan, St. Stephens Green">
                 <img src="../../images/IrelandGaol.jpeg" alt="Kilmainham Gaol staircase">
-              </div> 
+                <figcaption>Two different things to do in Dublin - feed swan or visit a prison!</figcaption>
+              </figure> 
               <p>Though I also got to visit Dublin Spire and Kilmainham Gaol (which was interesting as it was depressing), 
                 St. Stephen's Green was the site that really left an impression on me. It was just so pretty, with huge 
                 swan that people could feed! </p> 
-              <div class="SidebySide">
+              <figure class="SidebySide">
                 <img src="../../images/IrelandHowth1.jpg" alt="Coastline, Howth">
                 <img src="../../images/IrelandHowth2.jpg" alt="Coastline, Howth">
-              </div> 
+                <figcaption>Behold the beauty of Howth!</figcaption>
+              </figure> 
               <p> I also really liked Howth, which I found to be beautiful. I really wish I could have seen more of the Irish
                 coast, but I guess I will just have to go back some day! </p> 
             </div>
@@ -55,9 +60,9 @@
       <div class="navbar navbar-static-bottom">
         <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="About/index.html">About</a></li>
+          <li><a href="../../About/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="Contact/index.html">Contact</a></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
         </ul> 
       </div> 
     </footer> 
