--- a/countries/Netherlands/index.html
+++ b/countries/Netherlands/index.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>The Netherlands|My Travels</title>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="../../css/css/bootstrap.css">
-      <link rel="stylesheet" href="../../css/css/main.css"> 
+    <title>The Netherlands|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
-      <header class="navbar navbar-default navbar-static-top">
-          <div class="container">
-            <a href="../../index.html" class="navbar-brand">My Travels</a>
-            <ul class="nav navbar-nav navbar-right">
-              <li><i class="glyphicon glyphicon-plus"></i></li>
-              <li><a href="../../About/index.html">About</a></li>
-              <li><i class="glyphicon glyphicon-envelope"></i></li>
-              <li><a href="../../Contact/index.html">Contact</a></li>
-            </ul> 
-          </div>  
-        </header>  
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
+    </header>  
     <main>
-        <div class="container">
-            <div class="row">
-              <div class="col-md-12"> 
-                <h2>The Netherlands</h2> 
-              </div>
-            </div> 
-          <article class="CountryPages">
-            <div class="row">
-              <div class="col-md-12">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"> 
+            <h2>The Netherlands</h2> 
+          </div>
+        </div> 
+        <article class="CountryPages">
+          <div class="row">
+            <div class="col-md-12">
+              <figure> 
                 <img src="../../images/NetherlandsIAM.jpg" alt="I am Amsterdam sign">
-                <p>I went to the Netherlands right after my trip to Berlin. I went with the same friend who was with me in Berlin,
+                <figcaption>The famous "I AM AMSTERDAM" sculpture</figcaption>
+              </figure>
+              <p>I went to the Netherlands right after my trip to Berlin. I went with the same friend who was with me in Berlin,
                   and we both liked Amsterdam better. Our first few days were spent walking around Amsterdam and eating a lot of 
                   stroopwafel.</p>
+              <figure> 
                 <img src="../../images/NetherlandsCanals.jpeg" alt="Canals of Amsterdam">
-                <p>The canals were gorgeous at night.</p>
+                <figcaption>Canals of Amsterdam at night</figcaption>
+              </figure>
+              <p>The canals were gorgeous at night.</p>
+              <figure>
                 <img src="../../images/NetherlandsDam.jpg" alt="Dam Plaza, Amsterdam">
-                <p>Dam Plaza was fun to visit, especially since we went shopping at 
-                  De Bijenkorf. We honeslty just walked around and had <em>ahem</em> fun.</p> 
+                <figcaption>Dam Plaza</figcaption>
+              </figure>
+              <p>Dam Plaza was fun to visit, especially since we went shopping at De Bijenkorf. We honeslty just walked around and had 
+                <em>ahem</em> fun.</p> 
+              <figure> 
                 <img src="../../images/NetherlandsKinderdijk.jpg" alt="Windmills of Kinderdijk"> 
-                <p>Other than Amsterdam, the windmills of Kinderdijk 
-                  was another one of our destinations and it was really a cute trip!</p>
-              </div>
-            </div> 
+                <figcaption>Windmills of Kinderdijk</figcaption>
+              </figure>
+              <p>Other than Amsterdam, the windmills of Kinderdijk  was another one of our destinations and it was really a cute trip!</p>
+            </div>
+          </div> 
         </article>
       </div>
     </main> 
     <footer>
-        <div class="navbar navbar-static-bottom">
-          <ul>
-            <li><i class="glyphicon glyphicon-plus"></i></li>
-            <li><a href="../../About/index.html">About</a></li>
-            <li><i class="glyphicon glyphicon-envelope"></i></li>
-            <li><a href="../../Contact/index.html">Contact</a></li>
-          </ul> 
-        </div> 
-      </footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
+    </footer>
   </body>
 </html> 
