--- a/countries/Spain/index.html
+++ b/countries/Spain/index.html
@@ -28,18 +28,25 @@
         <article class="CountryPages">
           <div class="row">
             <div class="col-md-12"> 
-              <img src="../../images/SpainArcdeTriomf.jpg" alt="Arc de Triomf, Barcelona">
+              <figure> 
+                <img src="../../images/SpainArcdeTriomf.jpg" alt="Arc de Triomf, Barcelona">
+                <figcaption>Arc de Triomf</figcaption>
+              </figure>
               <p> I went to Barcelona with a bunch of people I didn't know very well, but it was still fun. We spent the first day
                 getting aclimated and walking around the Arc de Triomf. We ate a lot of tapas and also experienced the nightlife, which 
                 was timed a little too late for my taste (I'm a grandma).</p>
-              <div class="SidebySide">
+              <figure class="SidebySide">
                 <img src="../../images/SpainSagradaFamilia1.jpg" alt="Sagrada Familia, Barcelona">
                 <img src="../../images/SpainSagradaFamilia2.jpg" alt="Sagrada Familia, Barcelona">
-              </div> 
+                <figcaption>Sagrada Familia</figcaption>
+              </figure> 
               <p>My favorite parts were whenever we visited the architecure of
                 Antoni Gaudi, who I just think is crazy and out there - in a good way. The inside of Sagrada Familia is unlike anything I've
                 ever seen and I was taken aback to learn it has been under construction since it first started in 1882.</p> 
-              <img src="../../images/SpainCasaMila.jpg" alt="Casa Mila, Barcelona">
+              <figure> 
+                <img src="../../images/SpainCasaMila.jpg" alt="Casa Mila, Barcelona">
+                <figcaption>Casa Mila</figcaption>
+              </figure>
               <p> I also greatly enjoyed visited Casa Mila and wish I could live there! One can only dream. </p>
             </div>
           </div> 
@@ -47,14 +54,14 @@
       </div>
     </main> 
     <footer>
-        <div class="navbar navbar-static-bottom">
-          <ul>
-            <li><i class="glyphicon glyphicon-plus"></i></li>
-            <li><a href="About/index.html">About</a></li>
-            <li><i class="glyphicon glyphicon-envelope"></i></li>
-            <li><a href="Contact/index.html">Contact</a></li>
-          </ul> 
-        </div> 
-      </footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
+    </footer>
   </body>
 </html> 
