--- a/countries/UnitedKingdom/index.html
+++ b/countries/UnitedKingdom/index.html
@@ -28,18 +28,30 @@
         <article class="CountryPages"> 
           <div class="row">
             <div class="col-md-12">
-              <img src="../../images/UKTowerBridge.jpg" alt="Tower Bridge, London">
+              <figure> 
+                <img src="../../images/UKTowerBridge.jpg" alt="Tower Bridge, London">
+                <figcaption>My favorite site in London - Tower Bridge</figcaption>
+              </figure>
               <p>If you know me, you know I am a bit of an Anglophile. I LOVE British television. I would honestly love 
                   to one day live in London. I have been to London a few times, and the Tower Bridge is my favorite site. 
                   I just had a really good day when we visited, and so I always think of it fondly!</p>
-              <img src="../../images/UKBrighton.jpg" alt="The beach, Brighton, England">
+              <figure> 
+                <img src="../../images/UKBrighton.jpg" alt="The beach, Brighton, England">
+                <figcaption>The beach in Brighton</figcaption>
+              </figure>
               <p> The last time I went to the UK, however, we focused on places other than London. I went down to Brighton, where I would 
                 also love to live, it's such a pleasant place!</p> 
-              <img src="../../images/UKLiverpool.jpg" alt="Liverpool's Crosby Beach, with sculpture'">
+              <figure> 
+                <img src="../../images/UKLiverpool.jpg" alt="Liverpool's Crosby Beach, with sculpture'">
+                <figcaption>The beautiful Crosby Beach, Liverpool.</figcaption>
+              </figure>
               <p>We also went further north and visited Liverpool, where I was bowled over
                 by the sculpture "Another Place" installed at Crosby Beach. We visited the beach after the sun had just set, 
                 and it was something to behold. I would love to visit again and again at different times of the day.</p>
-              <img src="../../images/UKBalmoralHotel1.jpg" alt="Balmoral Hotel">
+              <figure> 
+                <img src="../../images/UKBalmoralHotel1.jpg" alt="Balmoral Hotel">
+                <figcaption>Balmoral Hotel in Edinburgh</figcaption>
+              </figure>
               <p>From Liverpool, we went further north to Scotland. I got to visit Glasgow and Edinburgh, which is one of the prettiest cities I have
                 ever seen. I especially liked the Balmoral Hotel, which was so striking against the blue sky. I definitely also want
                 to see more of Scotland - I look forward to one day visiting the highlands! </p> 
@@ -49,14 +61,14 @@
       </div> 
     </main> 
     <footer>
-        <div class="navbar navbar-static-bottom">
-          <ul>
-            <li><i class="glyphicon glyphicon-plus"></i></li>
-            <li><a href="About/index.html">About</a></li>
-            <li><i class="glyphicon glyphicon-envelope"></i></li>
-            <li><a href="Contact/index.html">Contact</a></li>
-          </ul> 
-        </div> 
-      </footer>
+      <div class="navbar navbar-static-bottom">
+        <ul>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+          <li><a href="../../About/index.html">About</a></li>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
+    </footer>
   </body>
 </html> 
