--- a/About/index.html
+++ b/About/index.html
@@ -3,15 +3,43 @@
   <head>
       <title>About|My Travels</title>
       <meta charset="UTF-8">
+      <link rel="stylesheet" href="../css/css/bootstrap.css">
+      <link rel="stylesheet" href="../css/css/main.css"> 
   </head>
   <body>
-    <header>
+    <header class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <a href="../index.html" class="navbar-brand">My Travels</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div>  
     </header>  
     <main>
+      <div class="container">
+        <div class="row">
+        <div class="col-md-12"> 
+          <h2>About</h2> 
+        </div>
+      </div> 
       <article>
-      </article>
+        <div class="row">
+          <div class="col-md-12">
+            <p>Hey there! Thanks for visiting my site. This is just a place for me to put down my experiences travelling. 
+              This is definitely not a place for you to come and actually learn substantial things about the places I visit,
+              just FYI! I am using this site to hone my HTML and CSS skills, using Boostrap! Thanks for visiting!</p>
+          </div>
+        </div>
+      </article> 
     </main> 
-    <footer>
-    </footer> 
+    <footer class="AboutContact">
+      <div class="navbar navbar-static-bottom" id="AboutPage">
+        <ul>
+          <li><i class="glyphicon glyphicon-envelope"></i></li>
+          <li><a href="../Contact/index.html">Contact</a></li>
+        </ul> 
+      </div> 
+    </footer>
   </body>
 </html> 
