--- a/countries/Egypt/index.html
+++ b/countries/Egypt/index.html
@@ -25,50 +25,54 @@
             <h2>Egypt</h2> 
           </div>
         </div> 
-        <div class="row">
-          <div class="col-md-12">
-            <article class="CountryPages">
+        <article class="CountryPages">
+          <div class="row">
+            <div class="col-md-12">
               <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
                 Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
                 we were finally able to do it together. </p>
-              <div class="SidebySide"> 
+              <figure class="SidebySide">  
                 <img src="../../images/EgyptKarnak.jpg" alt="Karnak Temple, Luxor">
-                <img src="../../images/EgyptNile.jpg" alt="Boat on the Nile, Luxor">
                 <img src="../../images/EgyptBalloon.jpg" alt="Hot air balloon over Hatshepsut Temple, Luxor">
-              </div> 
+                <figcaption>On left, Karnak Temple at night. On right, hot air balloon over Hatshepsut Temple</figcaption>
+              </figure> 
               <p>Our first few days were spent in Luxor, visiting ancient sites like the Hatshepsut and Karnak temples,
                 and befriending locals. My friend, for example, befriended a local boatman who took us out onto the Nile 
                 and helped us get tickets for a hot air balloon tour (which allowed us to see Hatshepsut from above)!</p>
-            <img src="../../images/EgyptAlexandria.jpg" alt="Alexandria coastline">
-            <p>After Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
+              <figure> 
+                <img src="../../images/EgyptAlexandria.jpg" alt="Alexandria coastline">
+                <figcaption>The coastline of Alexandria.</figcaption>
+              </figure> 
+              <p>After Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
               They took us around all over, including to the Citadel of Qaitbay, the Alexandrian library, and to get tea
               by the sea!</p> 
-            <div class="SidebySide"> 
-              <img src="../../images/EgyptMuhammadAli.jpg" alt="Muhammad Ali Mosque in Cairo">
-              <img src="../../images/EgyptMuseum.jpg" alt="Outside of the pink Egyptian Museum">
-            </div> 
-            <p>We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
+              <figure class="SidebySide"> 
+                <img src="../../images/EgyptMuhammadAli.jpg" alt="Muhammad Ali Mosque in Cairo">
+                <img src="../../images/EgyptMuseum.jpg" alt="Outside of the pink Egyptian Museum">
+                <figcaption>The sights of Cairo - Muhammad Ali Mosque on left, Egyptian Museum on right.</figcaption>
+              </figure> 
+              <p>We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
               including Tahrir Square, which has the Egyptian Museum nearby. Most memorable for me was the Mosque of Muhammad Ali 
               in the Saladin Citadel.</p> 
-            <div class="SidebySide">
-              <img src="../../images/EgyptPyramid.jpg" alt="Pyramids of Giza">
-              <img src="../../images/EgyptSphinx.jpg" alt="Sphinx of Giza"> 
-            </div> 
-            <p>The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
+              <figure> 
+                <img src="../../images/EgyptPyramid.jpg" alt="Pyramids of Giza">
+                <figcaption>The sites of Giza - Pyramids and Sphinx.</figcaption>
+              </figure> 
+              <p>The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
               there and it was honestly dreamlike. We also got to see the Sphinx, which was smaller than I thought it be but impressive
               nonetheless.</p>
-          </article>
-          </div>
-        </div> 
+            </div>
+          </div> 
+        </article>
       </div> 
     </main> 
     <footer>
       <div class="navbar navbar-static-bottom">
         <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="About/index.html">About</a></li>
+          <li><a href="../../About/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="Contact/index.html">Contact</a></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
         </ul> 
       </div> 
     </footer> 
