--- a/countries/India/index.html
+++ b/countries/India/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>India|My Travels</title>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="../../css/css/bootstrap.css">
-      <link rel="stylesheet" href="../../css/css/main.css"> 
+    <title>India|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/css/main.css"> 
   </head>
   <body>
     <header class="navbar navbar-default navbar-static-top">
@@ -25,37 +25,49 @@
             <h2>India</h2> 
           </div>
         </div>
-        <div class="row"> 
-          <div class="col-md-12">
-            <article class="CountryPages"> 
-              <img src="../../images/IndiaGoldenTemple.jpeg" alt="Golden Temple, Amritsar">
+        <article class="CountryPages"> 
+          <div class="row"> 
+            <div class="col-md-12">
+              <figure> 
+                <img src="../../images/IndiaGoldenTemple.jpeg" alt="Golden Temple, Amritsar">
+                <figcaption>Golden Temple in Amritsar, Punjab</figcaption>
+              </figure>
               <p>India is a place I really haven't explored. I have been there a few times now, but always with family
               and always to Punjab. Whenever I go, I end up sitting in some relative's house. I know I have been lucky 
               to see the famous Golden Temple a few times, but I would like to see and do more in India. I hope to one
               day take a really long tour of the whole country!</p> 
-              <img src="../../images/IndiaGolgappa.jpg" alt="Golgappa, delicious snack">
+              <figure> 
+                <img src="../../images/IndiaGolgappa.jpg" alt="Golgappa, delicious snack">
+                <figcaption>Golgappa, a delicious treat</figcaption>
+              </figure>
               <p>In terms of what I <em>have</em> experienced in India, I can say that I have eaten a lot of delicious food.
               My favorite thing to eat the last time I was there (in the city of Ludhiana) was Golgappa. God, I ate so many.
               It was blissful.</p>
-              <img src="../../images/IndiaWomen.jpg" alt="Women from Rajasthan in traditional clothing">
+              <figure> 
+                <img src="../../images/IndiaWomen.jpg" alt="Women from Rajasthan in traditional clothing">
+                <figcaption>Women in Rajasthani dress.</figcaption>
+              </figure> 
               <p>The last time I went I was lucky enough to experience some new things - I got to go to Rajasthan 
               and also see people race oxen. Though I did not visit any real historic sites in Rajasthan (again, we were stuck
               in someone's house), I did get to see traditional Rajasthani dress, which was striking.</p>
-              <img src="../../images/IndiaMustardField.jpg" alt="Mustard field in Punjab">
+              <figure> 
+                <img src="../../images/IndiaMustardField.jpg" alt="Mustard field in Punjab">
+                <figcaption>It's me, in a mustard field!</figcaption>
+              </figure>
               <p>I also got to see a lot of farmland, including mustard fields which were so pretty as to look photoshopped in pictures. I have enjoyed my past
                 visits to India, but I am definitely looking forward to doing more intensive travel on my own! </p>
-            </article>
-          </div>
-        </div> 
+            </div>
+          </div> 
+        </article>
       </div> 
     </main>  
     <footer>
       <div class="navbar navbar-static-bottom">
         <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="About/index.html">About</a></li>
+          <li><a href="../../About/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="Contact/index.html">Contact</a></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
         </ul> 
       </div> 
     </footer>
