--- a/countries/Italy/index.html
+++ b/countries/Italy/index.html
@@ -28,27 +28,38 @@
         <article class="CountryPages">
           <div class="row">
             <div class="col-md-12">
-              <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
+              <figure> 
+                <img src="../../images/ItalyPiazzaleCat.jpg" alt="Cat on steps, Piazzale Michelangelo">
+                <figcaption>A cat chilling on steps of Piazzale Michelangelo</figcaption>
+              </figure>
               <p> I studied abroad in Italy and even learned Italian pretty well! I have unfortunately forgetten much of it. 
                 I studied at the University of Florence and stayed with a sweet Italian family. The best way to take in Florence was
                 to go to the top of the Piazzale Michelangelo, which is positioned high above the whole city and which we visited
                 early in our stay.</p> 
-              <div class="SidebySide">
+              <figure class="SidebySide">
                 <img src="../../images/ItalyDuomo.jpg" alt="Duomo of Florence, Piazzale Michelangelo">
                 <img src="../../images/ItalyPonteVecchio.jpg" alt="Ponte Vecchio, Florence">
-              </div> 
+                <figcaption>Views from the Piazzale</figcaption>
+              </figure> 
               <p>From there, you can see the Duomo (which is in a dense, intricate area with one of the best pizza shops I have 
                 ever come across) and Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted to buy so many things! For most of
                 my stay in Italy, however, I spent the bulk of my money on pizza and gelato.</p> 
-              <img src="../../images/ItalyTuscany.jpg" alt="Tuscan countryside">
+              <figure> 
+                <img src="../../images/ItalyTuscany.jpg" alt="Tuscan countryside">
+                <figcaption>A glorious day in rural Tuscany! </figcaption>
+              </figure>
               <p>Aside from Florence, we got to visit a bunch of other places. I went to the Tuscan countryside and got tipsy at a wine tasting.</p>
-              <img src="../../images/ItalyVenice.jpg" alt="Venice">
+              <figure> 
+                <img src="../../images/ItalyVenice.jpg" alt="Venice">
+                <figcaption>Venice :)</figcaption>
+              </figure>
               <p>I visited Venice, which was the city that first got me interested in Italy to begin with. I bought a really cool Carnevale mask,
                 the Plague Doctor model. </p>
-              <div class="SidebySide">
+              <figure class="SidebySide">
                 <img src="../../images/ItalyPisa.jpg" alt="Leaning tower of Pisa">
                 <img src="../../images/ItalyColosseum.jpg" alt="Colosseum, Rome">
-              </div> 
+                <figcaption>The Tower of Pisa and the Colosseum!</figcaption>
+              </figure> 
               <p>I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
                   Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
                   Italy, however, as I never did make it to Milan or Sicily.</p>
@@ -61,9 +72,9 @@
       <div class="navbar navbar-static-bottom">
         <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="About/index.html">About</a></li>
+          <li><a href="../../About/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="Contact/index.html">Contact</a></li>
+          <li><a href="../../Contact/index.html">Contact</a></li>
         </ul> 
       </div> 
     </footer> 
