made responsive (except images)

--- a/html/egypt/index.html
+++ b/html/egypt/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Egypt|My Travels</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../css/boostrap/bootstrap.css">
+    <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../../css/main.css"> 
   </head>
   <body>
