made images responsive (could be better, ok for now)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/main.css"> 
+    <script>
+      // Picture element HTML5 shiv
+      document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <header class="navbar navbar-default navbar-static-top">
@@ -30,7 +35,7 @@
             <article>
               <div class="col-md-12">
                 <a href="html/india/index.html">
-                  <img src="images/india/india_golden_temple.jpeg" width="300" height="300" alt="Golden Temple in India">
+                  <img srcset="images/india/india_golden_temple.jpeg 1x, images/india/india_golden_temple_double.jpeg 2x" alt="Golden Temple in India">
                   <h3>India</h3> 
                 </a>
               </div>
@@ -47,7 +52,7 @@
             <article>       
               <div class="col-md-4">
                 <a href="html/argentina/index.html">
-                  <img src="images/argentina/argentina_la_boca.jpeg" width="300" height="300" alt="La Boca Neighborhood in Buenos Aires">
+                  <img src="images/argentina/argentina_la_boca.jpeg" alt="La Boca Neighborhood in Buenos Aires">
                   <h3>Argentina</h3>
                 </a>
               </div>
@@ -55,7 +60,7 @@
             <article>   
               <div class="col-md-4"> 
                 <a href="html/canada/index.html">
-                  <img src="images/canada/canada_vancouver_skyline.jpeg" width="300" height="300" alt="Vancouver Skyline">
+                  <img src="images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver Skyline">
                   <h3>Canada</h3>
                 </a>
               </div>
@@ -63,7 +68,7 @@
             <article>
               <div class="col-md-4">
                 <a href="html/uruguay/index.html">
-                  <img src="images/uruguay/uruguay_plaza_independencia.jpeg" width="300" height="300" alt="Plaza Independencia in Montevideo, Uruguay">
+                  <img src="images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia in Montevideo, Uruguay">
                   <h3>Uruguay</h3>
                 </a>
               </div> 
@@ -80,7 +85,7 @@
             <article>
               <div class="col-md-4">
                 <a href="html/france/index.html">
-                  <img src="images/france/france_eiffel.jpeg" width="300" height="300" alt="Eiffel Tower">
+                  <img src="images/france/france_eiffel.jpeg" alt="Eiffel Tower">
                   <h3>France</h3>
                 </a>
               </div>  
@@ -88,7 +93,7 @@
             <article>
               <div class="col-md-4">  
                 <a href="html/germany/index.html">
-                  <img src="images/germany/germany_brandenburg_gate.jpeg" width="300" height="300" alt="Brandenburg Gate in Berlin">
+                  <img src="images/germany/germany_brandenburg_gate.jpeg" alt="Brandenburg Gate in Berlin">
                   <h3>Germany</h3>
                 </a>
               </div>
@@ -96,7 +101,7 @@
             <article>  
               <div class="col-md-4"> 
                 <a href="html/greece/index.html">
-                  <img src="images/greece/greece_acropolis_1.jpeg" width="300" height="300" alt="Image of Acropolis in Rhodes, Greece">
+                  <img src="images/greece/greece_acropolis_1.jpeg" alt="Image of Acropolis in Rhodes, Greece">
                   <h3>Greece</h3>
                 </a>
               </div>
@@ -106,7 +111,7 @@
             <article>
               <div class="col-md-4">     
                 <a href="html/ireland/index.html">
-                  <img src="images/ireland/ireland_guinness.jpeg" width="300" height="300" alt="Image of Guinness factory in Dublin">
+                  <img src="images/ireland/ireland_guinness_copy.jpeg" alt="Image of Guinness factory in Dublin">
                   <h3>Ireland</h3>
                 </a>
               </div>
@@ -114,7 +119,7 @@
             <article> 
               <div class="col-md-4">
                 <a href="html/italy/index.html">
-                  <img src="images/italy/italy_pisa.jpeg" width="300" height="300" alt="Leaning tower of Pisa">
+                  <img src="images/italy/italy_pisa.jpeg" alt="Leaning tower of Pisa">
                   <h3>Italy</h3>
                 </a>
               </div>
@@ -122,7 +127,7 @@
             <article>   
               <div class="col-md-4"> 
                 <a href="html/netherlands/index.html">
-                  <img src="images/netherlands/netherlands_kinderdijk.jpeg" width="300" height="300" alt="Windmills of Kinderdijk, in Holland">
+                  <img src="images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk, in Holland">
                   <h3>The Netherlands</h3>
                 </a>
               </div>
@@ -132,7 +137,7 @@
             <article>
               <div class="col-md-4"> 
                 <a href="html/spain/index.html">
-                  <img src="images/spain/spain_sagrada_familia_1.jpeg" width="300" height="300" alt="Sagrada Familia in Barcelona">
+                  <img src="images/spain/spain_sagrada_familia_1.jpeg" alt="Sagrada Familia in Barcelona">
                   <h3>Spain</h3>
                 </a>
               </div>
@@ -140,7 +145,7 @@
             <article> 
               <div class="col-md-4">   
                 <a href="html/uk/index.html">
-                  <img src="images/uk/uk_tower_bridge.jpeg" width="300" height="300" alt="Tower Bridge in London">
+                  <img src="images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge in London">
                   <h3>United Kingdom</h3>
                 </a> 
               </div>
@@ -157,7 +162,7 @@
             <article>
               <div class="col-md-4"> 
                 <a href="html/egypt/index.html">
-                  <img src="images/egypt/egypt_pyramid.jpeg" width="300" height="300" alt="Pyramids of Giza">
+                  <img src="images/egypt/egypt_pyramid_copy.jpeg" alt="Pyramids of Giza">
                   <h3>Egypt</h3>
                 </a>
               </div>
