compiled css from sass, updated README.md

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -4,7 +4,7 @@
       <title>About|My Travels</title>
       <meta charset="UTF-8">
       <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
-      <link rel="stylesheet" href="../../css/main.css"> 
+      <link rel="stylesheet" href="../../css/main_updated.css"> 
   </head>
   <body>
     <header class="navbar navbar-default navbar-static-top">
