--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home|My Travels</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css"> 
+    <link rel="stylesheet" href="css/main_updated.css"> 
     <script>
       // Picture element HTML5 shiv
       document.createElement( "picture" );
