updated with simple grid, need to fix css

--- a/html/egypt/index.html
+++ b/html/egypt/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>Egypt|My Travels</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="../../css/main_updated.css"> 
+    <link rel="stylesheet" href="../../css/grid/simple-grid.css">
+    <link rel="stylesheet" href="../../css/main_updated.css">
   </head>
   <body>
-    <header class="navbar navbar-default navbar-static-top">
+    <header>
       <div class="container">
         <a href="../../index.html" class="navbar-brand">My Travels</a>
-        <ul class="nav navbar-nav navbar-right">
+        <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
           <li><a href="../about/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
@@ -21,13 +21,13 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-md-12"> 
+          <div class="col-12"> 
             <h2>Egypt</h2> 
           </div>
         </div> 
         <article class="country-page">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
               <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
                 Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
                 we were finally able to do it together. </p>
@@ -67,14 +67,12 @@
       </div> 
     </main> 
     <footer>
-      <div class="navbar navbar-static-bottom">
-        <ul>
-          <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="../about/index.html">About</a></li>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="../contact/index.html">Contact</a></li>
-        </ul> 
-      </div> 
+      <ul>
+        <li><i class="glyphicon glyphicon-plus"></i></li>
+        <li><a href="../about/index.html">About</a></li>
+        <li><i class="glyphicon glyphicon-envelope"></i></li>
+        <li><a href="../contact/index.html">Contact</a></li>
+      </ul> 
     </footer> 
   </body>
 </html> 
