--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Home|My Travels</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="css/main_updated.css"> 
+    <link rel="stylesheet" href="css/grid/simple-grid.css">
+    <link rel="stylesheet" href="css/main_updated.css">
     <script>
       // Picture element HTML5 shiv
       document.createElement( "picture" );
@@ -12,13 +12,11 @@
     <script src="js/picturefill.js" async></script>
   </head>
   <body>
-    <header class="navbar navbar-default navbar-static-top">
+    <header>
       <div class="container">
-        <a href="index.html" class="navbar-brand">My Travels</a>
-        <ul class="nav navbar-nav navbar-right">
-          <li><i class="glyphicon glyphicon-plus"></i></li>
+        <a href="index.html" class="title">My Travels</a>
+        <ul>
           <li><a href="html/about/index.html">About</a></li>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="html/contact/index.html">Contact</a></li>
         </ul> 
       </div> 
@@ -27,13 +25,13 @@
       <div class="container">
         <section>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
               <h2>Asia</h2>
             </div>
           </div>
           <div class="row">
             <article>
-              <div class="col-md-12">
+              <div class="col-12">
                 <a href="html/india/index.html">
                   <img srcset="images/india/india_golden_temple.jpeg 1x, images/india/india_golden_temple_double.jpeg 2x" alt="Golden Temple in India">
                   <h3>India</h3> 
@@ -44,13 +42,13 @@
         </section>
         <section>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
               <h2>Americas</h2>
             </div>
           </div>
           <div class="row">      
             <article>       
-              <div class="col-md-4">
+              <div class="col-4">
                 <a href="html/argentina/index.html">
                   <img src="images/argentina/argentina_la_boca.jpeg" alt="La Boca Neighborhood in Buenos Aires">
                   <h3>Argentina</h3>
@@ -58,7 +56,7 @@
               </div>
             </article>
             <article>   
-              <div class="col-md-4"> 
+              <div class="col-4"> 
                 <a href="html/canada/index.html">
                   <img src="images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver Skyline">
                   <h3>Canada</h3>
@@ -66,7 +64,7 @@
               </div>
             </article>
             <article>
-              <div class="col-md-4">
+              <div class="col-4">
                 <a href="html/uruguay/index.html">
                   <img src="images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia in Montevideo, Uruguay">
                   <h3>Uruguay</h3>
@@ -77,13 +75,13 @@
         </section>
         <section>
           <div class="row">
-            <div class="col-md-12"> 
+            <div class="col-12"> 
               <h2>Europe (yes, I'm including the UK)</h2>
             </div>
           </div>
           <div class="row">
             <article>
-              <div class="col-md-4">
+              <div class="col-4">
                 <a href="html/france/index.html">
                   <img src="images/france/france_eiffel.jpeg" alt="Eiffel Tower">
                   <h3>France</h3>
@@ -91,7 +89,7 @@
               </div>  
             </article>
             <article>
-              <div class="col-md-4">  
+              <div class="col-4">  
                 <a href="html/germany/index.html">
                   <img src="images/germany/germany_brandenburg_gate.jpeg" alt="Brandenburg Gate in Berlin">
                   <h3>Germany</h3>
@@ -99,7 +97,7 @@
               </div>
             </article>
             <article>  
-              <div class="col-md-4"> 
+              <div class="col-4"> 
                 <a href="html/greece/index.html">
                   <img src="images/greece/greece_acropolis_1.jpeg" alt="Image of Acropolis in Rhodes, Greece">
                   <h3>Greece</h3>
@@ -109,7 +107,7 @@
           </div> 
           <div class="row"> 
             <article>
-              <div class="col-md-4">     
+              <div class="col-4">     
                 <a href="html/ireland/index.html">
                   <img src="images/ireland/ireland_guinness_copy.jpeg" alt="Image of Guinness factory in Dublin">
                   <h3>Ireland</h3>
@@ -117,7 +115,7 @@
               </div>
             </article>  
             <article> 
-              <div class="col-md-4">
+              <div class="col-4">
                 <a href="html/italy/index.html">
                   <img src="images/italy/italy_pisa.jpeg" alt="Leaning tower of Pisa">
                   <h3>Italy</h3>
@@ -125,7 +123,7 @@
               </div>
             </article>
             <article>   
-              <div class="col-md-4"> 
+              <div class="col-4"> 
                 <a href="html/netherlands/index.html">
                   <img src="images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk, in Holland">
                   <h3>The Netherlands</h3>
@@ -135,7 +133,7 @@
           </div>   
           <div class="row"> 
             <article>
-              <div class="col-md-4"> 
+              <div class="col-4"> 
                 <a href="html/spain/index.html">
                   <img src="images/spain/spain_sagrada_familia_1.jpeg" alt="Sagrada Familia in Barcelona">
                   <h3>Spain</h3>
@@ -143,7 +141,7 @@
               </div>
             </article>
             <article> 
-              <div class="col-md-4">   
+              <div class="col-4">   
                 <a href="html/uk/index.html">
                   <img src="images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge in London">
                   <h3>United Kingdom</h3>
@@ -154,13 +152,13 @@
         </section>
         <section>
           <div class="row"> 
-            <div class="col-md-12">
+            <div class="col-12">
               <h2>Northern Africa</h2>
             </div>
           </div>
           <div class="row">
             <article>
-              <div class="col-md-4"> 
+              <div class="col-4"> 
                 <a href="html/egypt/index.html">
                   <img src="images/egypt/egypt_pyramid_copy.jpeg" alt="Pyramids of Giza">
                   <h3>Egypt</h3>
@@ -172,14 +170,10 @@
       </div>
     </main> 
     <footer>
-      <div class="navbar navbar-static-bottom">
-        <ul>
-          <li><i class="glyphicon glyphicon-plus"></i></li>
-          <li><a href="html/about/index.html">About</a></li>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
-          <li><a href="html/contact/index.html">Contact</a></li>
-        </ul> 
-      </div> 
+      <ul>
+        <li><a href="html/about/index.html">About</a></li>
+        <li><a href="html/contact/index.html">Contact</a></li>
+      </ul>  
     </footer>
   </body>
 </html> 
