--- a/html/about/index.html
+++ b/html/about/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>About|My Travels</title>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
-      <link rel="stylesheet" href="../../css/main_updated.css"> 
+    <title>About|My Travels</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/grid/simple-grid.css">
+    <link rel="stylesheet" href="../../css/main_updated.css">
   </head>
   <body>
-    <header class="navbar navbar-default navbar-static-top">
+    <header>
       <div class="container">
-        <a href="../../index.html" class="navbar-brand">My Travels</a>
-        <ul class="nav navbar-nav navbar-right">
+        <a href="../../index.html">My Travels</a>
+        <ul>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="../contact/index.html">Contact</a></li>
         </ul> 
@@ -19,13 +19,13 @@
     <main>
       <div class="container">
         <div class="row">
-        <div class="col-md-12"> 
+        <div class="col-12"> 
           <h2>About</h2> 
         </div>
       </div> 
       <article>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-12">
             <p>Hey there! Thanks for visiting my site. This is just a place for me to put down my experiences travelling. 
               This is definitely not a place for you to come and actually learn substantial things about the places I visit,
               just FYI! I am using this site to hone my HTML and CSS skills, using Boostrap! Thanks for visiting!</p>
@@ -34,7 +34,7 @@
       </article> 
     </main> 
     <footer class="about-contact">
-      <div class="navbar navbar-static-bottom" id="about-page">
+      <div id="about-page">
         <ul>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="../contact/index.html">Contact</a></li>
