--- a/html/germany/index.html
+++ b/html/germany/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>Germany|My Travels</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="../../css/main_updated.css"> 
+    <link rel="stylesheet" href="../../css/grid/simple-grid.css">
+    <link rel="stylesheet" href="../../css/main_updated.css">
   </head>
   <body>
-    <header class="navbar navbar-default navbar-static-top">
+    <header>
       <div class="container">
-        <a href="../../index.html" class="navbar-brand">My Travels</a>
-        <ul class="nav navbar-nav navbar-right">
+        <a href="../../index.html">My Travels</a>
+        <ul>
           <li><i class="glyphicon glyphicon-plus"></i></li>
           <li><a href="../about/index.html">About</a></li>
           <li><i class="glyphicon glyphicon-envelope"></i></li>
@@ -21,13 +21,13 @@
     <main>
       <div class="container"> 
         <div class="row">
-          <div class="col-md-12"> 
+          <div class="col-12"> 
             <h2>Germany</h2> 
           </div>
         </div>
         <article class="country-page">
           <div class="row">
-            <div class="col-md-12">           
+            <div class="col-12">           
               <figure> 
                 <img src="../../images/germany/germany_wall_1.jpeg" alt="Piece of Berlin wall">
                 <figcaption>Berlin Wall Today</figcaption>
@@ -60,14 +60,12 @@
       </div> 
     </main> 
     <footer>
-        <div class="navbar navbar-static-bottom">
-          <ul>
-            <li><i class="glyphicon glyphicon-plus"></i></li>
-            <li><a href="../about/index.html">About</a></li>
-            <li><i class="glyphicon glyphicon-envelope"></i></li>
-            <li><a href="../contact/index.html">Contact</a></li>
-          </ul> 
-        </div> 
-      </footer>
+      <ul>
+        <li><i class="glyphicon glyphicon-plus"></i></li>
+        <li><a href="../about/index.html">About</a></li>
+        <li><i class="glyphicon glyphicon-envelope"></i></li>
+        <li><a href="../contact/index.html">Contact</a></li>
+      </ul> 
+    </footer>
   </body>
 </html> 
