finished updating site

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -9,9 +9,8 @@
   <body>
     <header>
       <div class="container">
-        <a href="../../index.html">My Travels</a>
+        <a href="../../index.html" class="title">My Travels</a>
         <ul>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="../contact/index.html">Contact</a></li>
         </ul> 
       </div>  
@@ -33,10 +32,9 @@
         </div>
       </article> 
     </main> 
-    <footer class="about-contact">
-      <div id="about-page">
+    <footer>
+      <div class="footer">
         <ul>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="../contact/index.html">Contact</a></li>
         </ul> 
       </div> 
