--- a/html/argentina/index.html
+++ b/html/argentina/index.html
@@ -61,12 +61,12 @@
       </div>     
     </main> 
     <footer>
-      <ul>
-        <li><i class="glyphicon glyphicon-plus"></i></li>
-        <li><a href="../about/index.html">About</a></li>
-        <li><i class="glyphicon glyphicon-envelope"></i></li>
-        <li><a href="../contact/index.html">Contact</a></li>
-      </ul> 
+      <div class="footer">
+        <ul>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
+        </ul> 
+      </div>
     </footer>
   </body>
 </html> 
