--- a/html/contact/index.html
+++ b/html/contact/index.html
@@ -9,9 +9,8 @@
   <body>
     <header>
       <div class="container">
-        <a href="../../index.html">My Travels</a>
+        <a href="../../index.html" class="title">My Travels</a>
         <ul>
-          <li><i class="glyphicon glyphicon-plus"></i></li>
           <li><a href="../about/index.html">About</a></li>
         </ul> 
       </div>  
@@ -38,10 +37,9 @@
         </form>
       </div>       
     </main> 
-    <footer class="about-contact">
-      <div id="contact-page">
+    <footer>
+      <div class="footer">
         <ul>
-          <li><i class="glyphicon glyphicon-plus"></i></li>
           <li><a href="../about/index.html">About</a></li>
         </ul> 
       </div> 
