--- a/html/egypt/index.html
+++ b/html/egypt/index.html
@@ -9,11 +9,9 @@
   <body>
     <header>
       <div class="container">
-        <a href="../../index.html" class="navbar-brand">My Travels</a>
+        <a href="../../index.html" class="title">My Travels</a>
         <ul>
-          <li><i class="glyphicon glyphicon-plus"></i></li>
           <li><a href="../about/index.html">About</a></li>
-          <li><i class="glyphicon glyphicon-envelope"></i></li>
           <li><a href="../contact/index.html">Contact</a></li>
         </ul> 
       </div>  
@@ -67,12 +65,12 @@
       </div> 
     </main> 
     <footer>
-      <ul>
-        <li><i class="glyphicon glyphicon-plus"></i></li>
-        <li><a href="../about/index.html">About</a></li>
-        <li><i class="glyphicon glyphicon-envelope"></i></li>
-        <li><a href="../contact/index.html">Contact</a></li>
-      </ul> 
+      <div class="footer">
+        <ul>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
+        </ul> 
+      </div>
     </footer> 
   </body>
 </html> 
