--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/grid/simple-grid.css">
     <link rel="stylesheet" href="css/main_updated.css">
-    <script>
-      // Picture element HTML5 shiv
-      document.createElement( "picture" );
-    </script>
-    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <header>
@@ -33,7 +28,7 @@
             <article>
               <div class="col-12">
                 <a href="html/india/index.html">
-                  <img srcset="images/india/india_golden_temple.jpeg 1x, images/india/india_golden_temple_double.jpeg 2x" alt="Golden Temple in India">
+                  <img src="images/india/india_golden_temple.jpeg" alt="Golden Temple in India">
                   <h3>India</h3> 
                 </a>
               </div>
@@ -170,10 +165,12 @@
       </div>
     </main> 
     <footer>
-      <ul>
-        <li><a href="html/about/index.html">About</a></li>
-        <li><a href="html/contact/index.html">Contact</a></li>
-      </ul>  
+      <div class="footer">
+        <ul>
+          <li><a href="html/about/index.html">About</a></li>
+          <li><a href="html/contact/index.html">Contact</a></li>
+        </ul>  
+      </div> 
     </footer>
   </body>
 </html> 
